# image-segmentation-brain-tumor-detection

./: .gitignore  README.md  pyproject.toml
docs/: MLFlow.md
notebooks/: playground.ipynb  short-pipeline.ipynb
