[tool.poetry]
name = "image-segmentation-brain-tumor-detection"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
