[tool.poetry]
name = "image-segmentation-brain-tumor-detection"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
numpy = ">=1.23.5,<2.0.0"  # Specify a compatible range for TensorFlow
tensorflow = "^2.17.0"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
